added some styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,58 +1,43 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* Initial styling */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+  padding: 16px 32px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+section ul {
+  padding: 0;
+  display: grid;
+  grid-gap: 16px;
+  list-style: none;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
+li {
+  padding: 8px 16px;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  background-color: #333333;
+  border: 1px solid rgb(160, 160, 160);
 }
-button:hover {
-  border-color: #646cff;
+
+form {
+  display: flex;
+  align-items: center;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+form * {
+  margin-right: 16px;
 }
+
+input, button {
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid rgb(160, 160, 160);
+}
+
+.search-meta {
+  color: rgba(255, 255, 255, 0.5)
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
